test/src/e2e_vm_tests/test_programs/should_fail/type_alias_generic/src/main.sw
script;

struct Generic {}

type MyGeneric = Generi;

fn main() {}
